cmd/tap/lab/envoy.yaml
static_resources:
  listeners:
    - name: ingress
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: tap_lab
                route_config:
                  name: lab
                  virtual_hosts:
                    - name: mock_provider
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/"}
                          route: {cluster: mock_provider}
                http_filters:
                  - name: envoy.filters.http.tap
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap
                      common_config:
                        admin_config:
                          config_id: agent_creds_global_tap
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: mock_provider
      type: STRICT_DNS
      connect_timeout: 1s
      load_assignment:
        cluster_name: mock_provider
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock-provider
                      port_value: 8081
admin:
  access_log_path: /dev/null
  address:
    pipe:
      path: /run/adev-tap/admin.sock
